<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding_img"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/IngresaATuCuentaLinkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poetsenone_regular"
        android:text="@string/ingresa_a_tu_cuenta"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciarSesionTextView" />


    <TextView
        android:id="@+id/iniciarSesionTextView"
        android:layout_width="293dp"
        android:layout_height="50dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="141dp"
        android:fontFamily="@font/poetsenone_regular"
        android:text="@string/iniciar_sesion"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/IngresaATuCuentaLinkText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombreEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginVertical="100dp"
        android:layout_marginTop="56dp"
        android:autofillHints="name"
        android:background="@drawable/edittext_rounded_bg"
        android:ems="10"
        android:enabled="true"
        android:fontFamily="@font/poetsenone_regular"
        android:hint="@string/correo"
        android:inputType="text"
        android:paddingHorizontal="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IngresaATuCuentaLinkText" />

    <EditText
        android:id="@+id/contrasenaEditText"
        android:textColor="@color/black"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_rounded_bg"
        android:ems="10"
        android:fontFamily="@font/poetsenone_regular"
        android:hint="@string/contrasenia"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:paddingHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreEditText" />



    <!--    android:onClick="registrarUsuario"-->

    <Button
        android:id="@+id/IngresarBtn"
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="160dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/poetsenone_regular"
        android:onClick="irADishes"
        android:text="@string/ingresar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contrasenaEditText" />

    <TextView
        android:id="@+id/noTienesCuentaLinkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/poetsenone_regular"
        android:text="@string/no_tienes_cuenta"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/olvidasteLinkText" />

    <Button
        android:id="@+id/registrarBtn"
        android:layout_width="137dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_button_2"
        android:fontFamily="@font/poetsenone_regular"
        android:text="@string/registrar"
        android:textAllCaps="false"
        android:textColor="@color/principal_naranja"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noTienesCuentaLinkText" />

    <Button
        android:id="@+id/olvidasteLinkText"
        android:textSize="14sp"
        android:layout_width="182dp"
        android:layout_height="39dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/poetsenone_regular"
        android:padding="4dp"
        android:text="@string/olvidaste_contraseña"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IngresarBtn" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="135dp"
        android:layout_height="76dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/logo_sin_fondo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>