<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#C8BABA"
    android:backgroundTint="#DFDCDC"
    tools:context=".ProfileFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:fontFamily="@font/poetsenone_regular"
        android:text="@string/mi_perfil"
        android:textColor="#2C2C2C"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poetsenone_regular"
        android:text="@string/actualiza_info_perfil"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

    <ImageView
        android:id="@+id/profile_image_view"
        android:layout_width="180dp"
        android:layout_height="144dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/avatar_usuario"
        android:src="@drawable/image9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView12" />

    <Button
        android:id="@+id/change_image_button"
        android:fontFamily="@font/poetsenone_regular"
        android:layout_width="142dp"
        android:layout_height="48dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/rounded_button_2"
        android:backgroundTint="#F06333"
        android:text="@string/cambiar_foto"
        android:textAllCaps="false"
        android:textColor="#FEFEFE"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image_view"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textViewName4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poetsenone_regular"
        android:text="Hola"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/change_image_button" />


    <TextView
        android:id="@+id/textViewName2"
        android:fontFamily="@font/poetsenone_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/correo_ejemplo"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewName4" />


    <Button
        android:id="@+id/button5"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_button_2"
        android:fontFamily="@font/poetsenone_regular"
        android:text="@string/cerrar_sesion"
        android:textAllCaps="false"
        android:textColor="#F16333"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName2" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
